# qt5-notifyd

./: CMakeLists.txt  PKGBUILD
data/: qt5-notifyd.desktop.in
src/: Widget.cpp
